--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "guzzlehttp/guzzle": "^6.3|^7.0",
         "firebase/php-jwt": "^6.4",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0|^8.0|^9.0"
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "license": "MIT",
     "autoload": {
